added a default value to price

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@
 target/
 .idea/
 Config.java
+
+add unique to categories and email and usernames
+
+finish dynamic nav bar
+
+add counter from counter servlet to single page ad view
+
+
+
