made the categories and usernames and emails all unique in the database

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,15 @@ target/
 .idea/
 Config.java
 
-add unique to categories and email and usernames
+add unique to categories and email and usernames --
 
-finish dynamic nav bar
+finish dynamic nav bar --
 
-add counter from counter servlet to single page ad view
+add counter from counter servlet to single page ad view --
+
+add categories to everything -- I'll do it with lexi tomorrow morning
+
+styling
 
 
 
