--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ target/
 .idea/
 Config.java
 
-add unique to categories and email and usernames --
+add unique to categories and email and usernames -- done
 
 finish dynamic nav bar --
 
@@ -12,6 +12,4 @@ add counter from counter servlet to single page ad view --
 add categories to everything -- I'll do it with lexi tomorrow morning
 
 styling
-
-
 
